kubernetes/apps/umami/umami/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-public-umami-ingest
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network-public
  to:
    - group: ""
      kind: Service
      name: umami
