kubernetes/apps/umami/umami/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami-dashboard
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - umami.lab.fobiat.dev
  rules:
    - backendRefs:
        - name: umami
          port: 3000
